restructure the code in app.py and agent.py, add models.py to import model

--- a/WebApp/.env
+++ b/WebApp/.env
@@ -1,1 +1,8 @@
-GEMINI_API_KEY='INPUT_YOUR_API_HERE_GUYS'
+GEMINI_API_KEY='AIzaSyDqsDptQpCvQ1RvNnRSPk8Ze600kFtBtjY'
+LLAMA = "ollama/llama3.2:latest"
+GEMMMA = "ollama/gemma3:latest"
+MISTRAL = "ollama/mistral:latest"
+COGITO = "ollama/cogito:latest"
+EXAONE = "ollama/exaone-deep:latest"
+SERPER_API_KEY = '4dc020de91c6d44d04c6ae6adb27bc615e60739f'
+BROWSERLESS_API_KEY = 'S8EJ6oyUACZb0Uc7371e3fb8e13c6ccadf631feaba'
